@@ -1,27 +1,0 @@
-#
-#  $Id$
-#
-#  COPYRIGHT (c) 1989-1999.
-#  On-Line Applications Research Corporation (OAR).
-#
-#  The license and distribution terms for this file may be
-#  found in the file LICENSE in this distribution or at
-#  http://www.rtems.com/license/LICENSE.
-#
-
-
-This file describes the directives and concepts tested by this test set.
-
-test set name:  testfatal
-
-directives: none
-
-concepts:
-
-  a.  Verifies that the proper error is reported by k_fatal when a task
-      exits.
-
-  b.  Verifies that the task exitted extension works correctly.
-
-  c.  Verifies that the fatal error extension works corectly.
-
