@@ -1,28 +1,0 @@
-/*  Task_1
- *
- *  This routine serves as a test task.  It verifies the task manager.
- *
- *  Input parameters:
- *    argument - task argument
- *
- *  Output parameters:  NONE
- *
- *  COPYRIGHT (c) 1989-1999.
- *  On-Line Applications Research Corporation (OAR).
- *
- *  The license and distribution terms for this file may be
- *  found in the file LICENSE in this distribution or at
- *  http://www.rtems.com/license/LICENSE.
- *
- *  $Id$
- */
-
-#include "system.h"
-
-rtems_task Task_1(
-  rtems_task_argument argument
-)
-{
-  puts( "\n\n*** TEST FATAL ***" );
-  puts( "TA1 - exitting task" );
-}
